testsuite/bsc.names/portRenaming/invalidAttrs/result/Empty.bsv

interface Ifc;
 (* result = "" *)
 method Bool check ();
endinterface

